unpackaged/main/default/objects/SPCC_Inspection_Checklist__c/SPCC_Inspection_Checklist__c.object-meta.xml
<CustomObject>
    <label>SPCC Inspection Checklist</label>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>SPCC Inspection Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPCC Inspection Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>