unpackaged/main/default/objects/SPCC_Inspection_Checklist__c/fields/Observations_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Observations_Action_Items__c</fullName>
    <label>Observations / Action Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>