unpackaged/main/default/objects/SPCC_Inspection_Checklist__c/fields/SPCC_Inspection__c.field-meta.xml
<CustomField>
    <fullName>SPCC_Inspection__c</fullName>
    <label>SPCC Inspection</label>
    <referenceTo>SPCC_Inspection__c</referenceTo>
    <relationshipLabel>SPCC Inspection Checklists</relationshipLabel>
    <relationshipName>SPCC_Inspection_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>