unpackaged/main/default/objects/SPCC_Inspection_Checklist__c/fields/Yes_No_NA__c.field-meta.xml
<CustomField>
    <fullName>Yes_No_NA__c</fullName>
    <label>Yes No N/A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>